--- a/node/Containerfile
+++ b/node/Containerfile
@@ -4,7 +4,7 @@ FROM $BASE_IMG AS node-runner
 USER root
 
 # https://nodejs.org/en/download/package-manager/#centos-fedora-and-red-hat-enterprise-linux
-# 14 is LTS
-RUN dnf module install -y nodejs:14
+# 22 is LTS
+RUN dnf install nodejs -y
 
 USER $UID
